# zoom-bot

./: .env.example  .gitignore  AUDIO_FIXES_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  CORRECTED_IMPLEMENTATION.md  DEBUG_TROUBLESHOOTING.md  Dockerfile  LICENSE  ORGANIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  STREAMING_INTEGRATION.md  WAITING_ROOM_AND_RECORDING_FIXES.md  asound.conf  audio_processor.py  convert_to_wav.sh  debug_improvements.md  debug_test.cpp  glib_implementation_guide.sh  pulseaudio-virtual.pa  requirements.txt  run-zoom-bot.sh  setup-container-audio.sh  setup-env.sh  setup-virtual-audio.sh  start_audio_service.sh  test-virtual-audio.sh  test_audio_processor.py  timeout_test_results.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: README.md  docker-entrypoint.sh
docs/: DEBUG_GUIDE.md  DOCKERFILE_DEPENDENCIES_UPDATE.md  GLIB_IMPLEMENTATION.md  RAW_AUDIO_STATUS.md  README.md  REFACTORING_COMPLETE.md  SHUTDOWN_FEATURE.md  STREAMING_INTEGRATION.md  TEST_GUIDE.md  TIMEOUT_FIXES.md  VIRTUAL_AUDIO_SETUP.md  WAV_CONVERSION_GUIDE.md  enhanced_detection.md  zak_token_removal.md
scripts/: README.md  setup-robust-audio.sh  setup-simple-audio.sh
src/: audio_manager.cpp  audio_manager.h  audio_raw_handler.cpp  audio_raw_handler.h  audio_streamer.cpp  audio_streamer.h  auth_event_handler.cpp  auth_event_handler.h  config.cpp  config.h  jwt_helper.cpp  jwt_helper.h  main.cpp  meeting_detector.cpp  meeting_detector.h  meeting_event_handler.cpp  meeting_event_handler.h  meeting_setup.cpp  meeting_setup.h  sdk_initializer.cpp  sdk_initializer.h  signal_test.cpp  test_auth.cpp  token_manager.cpp  token_manager.h  wav_converter.cpp  zoom_auth.cpp  zoom_auth.h
tests/: README.md  test-audio-system.sh  test-recording-permission.sh  test-zoom-bot.sh  test_auth.cpp  test_connection.py  test_console_input.sh
